powiazanie miedzy portfolio a instrumentem

--- a/test/fixtures/portfolios.yml
+++ b/test/fixtures/portfolios.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  value: 9.99
-  creationDate: 2013-06-15
-
-two:
-  value: 9.99
-  creationDate: 2013-06-15
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+#  column: value
